# dns-resolver

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
examples/: resolve.rs
src/: cache.rs  lib.rs  main.rs  server.rs
static/: index.html
