[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
moka = { version = "0.12.10", features = ["future"] }
num_enum = "0.7.4"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["net", "rt-multi-thread", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
