[package]
name = "dns-resolver-rs"
version = "0.1.1"
edition = "2024"

authors = ["Gaurav Kumar <gauravsingh12341@gmail.com>"]
description = "A simple DNS resolver server built with Axum and Tokio"
license = "MIT"
documentation = "https://docs.rs/dns-resolver-rs"
repository = "https://github.com/gausk/dns-resolver"
homepage = "https://github.com/gausk/dns-resolver"
readme = "README.md"
keywords = ["dns", "resolver", "axum", "tokio"]
categories = ["network-programming", "asynchronous"]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
moka = { version = "0.12.10", features = ["future"] }
num_enum = "0.7.4"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["net", "rt-multi-thread", "macros", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
